blinkt-k8s-controller-ds.yaml
kind: DaemonSet
apiVersion: apps/v1
metadata:
  name: blinkt-k8s-controller
  namespace: kube-system
spec:
  selector:
    matchLabels:
      name: blinkt-k8s-controller
  template:
    metadata:
      labels:
        name: blinkt-k8s-controller
    spec:
      serviceAccountName: blinkt-k8s-controller-sa
      nodeSelector:
        deviceType: blinkt
      containers:
      - name: blinkt-k8s-controller
        image: apprenda/blinkt-k8s-controller:v3
        volumeMounts:
        - mountPath: /sys
          name: sys-tree
      volumes:
      - name: sys-tree
        hostPath:
          path: /sys
