deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: lmw-leaf
  labels:
    app.kubernetes.io/name: lmw-leaf
spec:
  type: NodePort
  ports:
    - name: http
      port: 3000
      nodePort: 30000
  selector:
    app.kubernetes.io/name: lmw-leaf
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: lmw-leaf
  name: lmw-leaf
spec:
  replicas: 5
  selector:
    matchLabels:
      app.kubernetes.io/name: lmw-leaf
  template:
    metadata:
      labels:
        app.kubernetes.io/name: lmw-leaf
        blinkt: show
        blinktColor: FF2200 #softhouse orange
        #blinktColor: FF0000 #red
        #blinktColor: 00FF00 #green
        #blinktColor: 0000FF #blue
        #blinktColor: FFFF00 #yellow
        #blinktColor: 00FFFF #aqua
        #blinktColor: FF00FF #pink
        #blinktColor: FFFFFF #white
    spec:
      terminationGracePeriodSeconds: 0
      tolerations:
      - effect: NoExecute
        key: node.kubernetes.io/not-ready
        operator: Exists
        tolerationSeconds: 10
      - effect: NoExecute
        key: node.kubernetes.io/unreachable
        operator: Exists
        tolerationSeconds: 10
      containers:
      - image: istmowday/lmw-leaf:arm-1.4
        name: lmw-leaf
        ports:
        - containerPort: 3000
        readinessProbe:
          httpGet:
            path: /
            port: 3000
          failureThreshold: 2
          initialDelaySeconds: 1
          timeoutSeconds: 1
          periodSeconds: 1
        resources:
          requests:
            cpu: 1000m
