kubernetes-rocks.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubernetes-rocks
  labels:
    app: kuberneres-rocks
spec:
  type: NodePort
  ports:
    - name: http
      port: 8000
  selector:
    app: kubernetes-rocks
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubernetes-rocks
spec:
  selector:
    matchLabels:
      app: kubernetes-rocks
  replicas: 5
  template:
    metadata:
      labels:
        app: kubernetes-rocks
        blinkt: show
        #blinktColor: 00FF00 #green
        #blinktColor: FF0000 #red
        #blinktColor: "FFFF00" #yellow
        #blinktColor: 00FFFF #aqua
        blinktColor: 0000FF #blue
        #blinktColor: 8000FF #purple
        #blinktColor: FF00FF #pink
    spec:
      terminationGracePeriodSeconds: 0
      #affinity:
      #  podAntiAffinity:
      #    requiredDuringSchedulingIgnoredDuringExecution:
      #    - labelSelector:
      #        matchExpressions:
      #        - key: component
      #          operator: In
      #          values:
      #          - default-backend
      #      topologyKey: "failure-domain.beta.kubernetes.io/zone"
      containers:
      - name: kubernetes-rocks
        image: jonaseck/kubernetes-rocks
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8000
        readinessProbe:
          httpGet:
            path: /healthz
            port: 8000
          initialDelaySeconds: 0
          periodSeconds: 1
          timeoutSeconds: 3
