grafana-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
namespace: kube-system
metadata:
  name: monitoring-grafana
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: monitoring-grafana
          servicePort: 80
