kubernetes-rocks-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: kubernetes-rocks
  annotations: {}
spec:
  rules:
  - http:
      paths:
      - #host: k8-t<team>-n1
        path: /
        backend:
          serviceName: kubernetes-rocks
          servicePort: http
